<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/descubrir"
            android:checked="true"/>
        <item
            android:id="@+id/nav_notif"
            android:icon="@drawable/ic_notif"
            android:title="@string/notificaciones" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_settings"
            android:title="@string/configuracion" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/informacion" />
    </group>

</menu>
