<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="6dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infoTitle"
                android:id="@+id/infoView"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="16dp"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InfoContent"
                android:id="@+id/infoContent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versionTitle"
                android:id="@+id/otherView"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="16dp"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otherContent"
                android:id="@+id/otherContent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>